Only filter out trampoline symbols where a corresponding non-trampoline symbol exists

Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=29548